[gd_scene load_steps=81 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Men2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/men_pistol/U/2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Arm_Gr/armL.png" type="Texture" id=4]
[ext_resource path="res://Sprites/men_pistol/R/3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/men_pistol/U/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/men_pistol/U/4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/men_pistol/R/4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/men_pistol/L/4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/men_pistol/R/1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/men_pistol/R/2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/men_pistol/D/1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/men_pistol/L/3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/men_pistol/D/2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/men_pistol/D/4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/men_pistol/D/3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/men_pistol/L/1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/men_pistol/L/2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Arm_Gr/armR.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Arm_Gr/armD.png" type="Texture" id=20]
[ext_resource path="res://Sprites/men_pistol/Turret_men.png" type="Texture" id=21]
[ext_resource path="res://Sprites/men_pistol/Turret_men(R).png" type="Texture" id=22]
[ext_resource path="res://Sprites/men_pistol/Turrent_men(D).png" type="Texture" id=23]
[ext_resource path="res://Sprites/men_pistol/Turrent_men(U).png" type="Texture" id=24]
[ext_resource path="res://Scenes/Barrconnect.tscn" type="PackedScene" id=25]
[ext_resource path="res://Sprites/men_pistol/U/3.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Barrconnect2.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scenes/Barrconnect3.tscn" type="PackedScene" id=28]
[ext_resource path="res://Sprites/RUN/Down/1.png" type="Texture" id=29]
[ext_resource path="res://Sprites/RUN/Down/4 l.png" type="Texture" id=30]
[ext_resource path="res://Sprites/RUN/Down/2.png" type="Texture" id=31]
[ext_resource path="res://Sprites/RUN/Down/3.png" type="Texture" id=32]
[ext_resource path="res://Sprites/RUN/Up/3.png" type="Texture" id=33]
[ext_resource path="res://Sprites/RUN/Up/1.png" type="Texture" id=34]
[ext_resource path="res://Sprites/RUN/Up/2.png" type="Texture" id=35]
[ext_resource path="res://Sprites/RUN/Up/4.png" type="Texture" id=36]
[ext_resource path="res://Sprites/RUN/Left/2.png" type="Texture" id=37]
[ext_resource path="res://Sprites/RUN/Right/3.png" type="Texture" id=38]
[ext_resource path="res://Sprites/RUN/Left/3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/RUN/Right/4.png" type="Texture" id=40]
[ext_resource path="res://Sprites/RUN/Left/4.png" type="Texture" id=41]
[ext_resource path="res://Sprites/RUN/Right/1.png" type="Texture" id=42]
[ext_resource path="res://Sprites/RUN/Right/2.png" type="Texture" id=43]
[ext_resource path="res://Sprites/RUN/Left/1.png" type="Texture" id=44]
[ext_resource path="res://Sprites/men_baseballbat/D/1.png" type="Texture" id=45]
[ext_resource path="res://Sprites/men_baseballbat/D/3.png" type="Texture" id=46]
[ext_resource path="res://Sprites/men_baseballbat/walk/Right/4.png" type="Texture" id=47]
[ext_resource path="res://Sprites/men_baseballbat/walk/Up/1.png" type="Texture" id=48]
[ext_resource path="res://Sprites/men_baseballbat/walk/Up/2.png" type="Texture" id=49]
[ext_resource path="res://Sprites/men_baseballbat/walk/Down/1.png" type="Texture" id=50]
[ext_resource path="res://Sprites/men_baseballbat/walk/Down/2.png" type="Texture" id=51]
[ext_resource path="res://Sprites/men_baseballbat/U/1.png" type="Texture" id=52]
[ext_resource path="res://Sprites/men_baseballbat/walk/Down/3.png" type="Texture" id=53]
[ext_resource path="res://Sprites/men_baseballbat/R/3.png" type="Texture" id=54]
[ext_resource path="res://Sprites/men_baseballbat/U/2.png" type="Texture" id=55]
[ext_resource path="res://Sprites/men_baseballbat/R/1.png" type="Texture" id=56]
[ext_resource path="res://Sprites/men_baseballbat/L/1.png" type="Texture" id=57]
[ext_resource path="res://Sprites/men_baseballbat/walk/Down/4.png" type="Texture" id=58]
[ext_resource path="res://Sprites/men_baseballbat/walk/Left/1.png" type="Texture" id=59]
[ext_resource path="res://Sprites/men_baseballbat/L/3.png" type="Texture" id=60]
[ext_resource path="res://Sprites/men_baseballbat/walk/Right/1.png" type="Texture" id=61]
[ext_resource path="res://Sprites/men_baseballbat/walk/Right/2.png" type="Texture" id=62]
[ext_resource path="res://Sprites/men_baseballbat/walk/Right/3.png" type="Texture" id=63]
[ext_resource path="res://Sprites/men_baseballbat/walk/Left/3.png" type="Texture" id=64]
[ext_resource path="res://Sprites/men_baseballbat/walk/Left/2.png" type="Texture" id=65]
[ext_resource path="res://Sprites/men_baseballbat/walk/Left/4.png" type="Texture" id=66]
[ext_resource path="res://Sprites/men_baseballbat/walk/Up/4.png" type="Texture" id=67]
[ext_resource path="res://Sprites/men_baseballbat/walk/Up/3.png" type="Texture" id=68]
[ext_resource path="res://Scenes/BitaD.tscn" type="PackedScene" id=69]
[ext_resource path="res://Scenes/BitaR.tscn" type="PackedScene" id=70]
[ext_resource path="res://Scenes/BitaL.tscn" type="PackedScene" id=71]
[ext_resource path="res://Scenes/BitaU.tscn" type="PackedScene" id=72]
[ext_resource path="res://Sounds/Shot1.wav" type="AudioStream" id=73]
[ext_resource path="res://Sounds/Damage2.wav" type="AudioStream" id=74]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 30 ) ],
"loop": true,
"name": "HandD",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idleL",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 41 ) ],
"loop": true,
"name": "HandL",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "HandidleR",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idleR",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "HandidleD",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 26 ), ExtResource( 3 ) ],
"loop": true,
"name": "TurnD",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "D",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "R",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "L",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "U",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idleU",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "TurnU",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idleD",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 36 ) ],
"loop": true,
"name": "HandU",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 11 ) ],
"loop": true,
"name": "TurnL",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "HandidleU",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "TurnR",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 40 ) ],
"loop": true,
"name": "HandR",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "HandidleL",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.1181, 94.9405 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.7627, 91.1607 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 54.9007
height = 112.382

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 59 ) ],
"loop": true,
"name": "idleL",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ) ],
"loop": true,
"name": "idleR",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 58 ) ],
"loop": true,
"name": "D",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 47 ) ],
"loop": true,
"name": "R",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 65 ), ExtResource( 64 ), ExtResource( 66 ) ],
"loop": true,
"name": "L",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 68 ), ExtResource( 67 ) ],
"loop": true,
"name": "U",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "idleU",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "idleD",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ) ],
"loop": true,
"name": "StrikeU",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "StrikeR",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ) ],
"loop": true,
"name": "StrikeL",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "StrikeD",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 55 ), ExtResource( 52 ) ],
"loop": true,
"name": "StrikeU",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 56 ) ],
"loop": true,
"name": "StrikeR",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 57 ) ],
"loop": true,
"name": "StrikeL",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 45 ) ],
"loop": true,
"name": "StrikeD",
"speed": 5.0
} ]

[node name="Player" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Turrent_U" type="Sprite" parent="." index="0"]
position = Vector2( 0, -101 )
scale = Vector2( 1.561, 1.786 )
texture = ExtResource( 24 )

[node name="Turrent_D" type="Sprite" parent="." index="1"]
visible = false
position = Vector2( 7, 94 )
scale = Vector2( 1.561, 1.786 )
texture = ExtResource( 23 )

[node name="Turrent_R" type="Sprite" parent="." index="2"]
visible = false
scale = Vector2( 1.561, 1.786 )
texture = ExtResource( 22 )

[node name="Turrent" type="Sprite" parent="." index="3"]
visible = false
scale = Vector2( 1.561, 1.786 )
texture = ExtResource( 21 )

[node name="Arm_Right" type="Sprite" parent="." index="4"]
visible = false
position = Vector2( 30.3912, 6.84312 )
texture = ExtResource( 19 )

[node name="Arm_Left" type="Sprite" parent="." index="5"]
visible = false
position = Vector2( -26.4799, 6.53616 )
texture = ExtResource( 4 )

[node name="anim" type="AnimatedSprite" parent="." index="6"]
position = Vector2( -269.231, -164.45 )
scale = Vector2( 1.56123, 1.78572 )
frames = SubResource( 1 )
animation = "idleD"
centered = false

[node name="HP_bar" parent="." index="7"]
margin_left = -329.541
margin_top = -692.653
margin_right = 336.459
margin_bottom = -507.653

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="8"]
visible = false
position = Vector2( -31.858, -4.43323 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="9"]
visible = false
position = Vector2( 36.8781, -5.43323 )
shape = SubResource( 3 )

[node name="HitBox" parent="." index="10"]
position = Vector2( -7.55951, -4.47851 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( 7.4219, 2.04153 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="." index="11"]
position = Vector2( 103, 10 )
scale = Vector2( 1e-05, 1e-05 )

[node name="Position2D2" type="Position2D" parent="." index="12"]
position = Vector2( -86.299, 12.4181 )

[node name="Position2D3" type="Position2D" parent="." index="13"]
position = Vector2( -1.10013, 74.7421 )

[node name="Position2D4" type="Position2D" parent="." index="14"]
position = Vector2( -0.31596, -116.781 )

[node name="Camera2D" type="Camera2D" parent="." index="15"]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="AllowShoot" type="Timer" parent="." index="16"]

[node name="PR" type="Position2D" parent="." index="17"]
position = Vector2( 86.056, -13.2704 )

[node name="PL" type="Position2D" parent="." index="18"]
position = Vector2( -68.2245, -14.1581 )

[node name="PD" type="Position2D" parent="." index="19"]
position = Vector2( 6.60712, 60.4081 )

[node name="PU" type="Position2D" parent="." index="20"]
position = Vector2( 1.66327, -134.03 )

[node name="Arm" type="Timer" parent="." index="21"]

[node name="Arm_Down" type="Sprite" parent="." index="22"]
position = Vector2( 4.59933, 55.6169 )
scale = Vector2( 1.54613, 1.786 )
texture = ExtResource( 20 )

[node name="Br_D" type="Position2D" parent="." index="23"]
position = Vector2( 0, 194 )

[node name="Br_U" type="Position2D" parent="." index="24"]
position = Vector2( 0, -194 )

[node name="Br_L" type="Position2D" parent="." index="25"]
position = Vector2( -206, 0 )

[node name="Br_R" type="Position2D" parent="." index="26"]
position = Vector2( 206, 0 )

[node name="Turrent_L1" type="Position2D" parent="." index="27"]
position = Vector2( -235.731, -17.2163 )

[node name="Turrent_L2" type="Position2D" parent="." index="28"]
position = Vector2( -235.797, -6.88651 )

[node name="Turrent_L3" type="Position2D" parent="." index="29"]
position = Vector2( -235.797, 2.78107 )

[node name="Turrent_R1" type="Position2D" parent="." index="30"]
position = Vector2( 238.097, -16.7113 )

[node name="Turrent_R2" type="Position2D" parent="." index="31"]
position = Vector2( 238.087, -7.24207 )

[node name="Turrent_R3" type="Position2D" parent="." index="32"]
position = Vector2( 238.082, 2.64487 )

[node name="Turrent_D1" type="Position2D" parent="." index="33"]
position = Vector2( 15.4222, 332.869 )

[node name="Turrent_D2" type="Position2D" parent="." index="34"]
position = Vector2( 6.77798, 332.876 )

[node name="Turrent_D3" type="Position2D" parent="." index="35"]
position = Vector2( -1.73177, 333.041 )

[node name="Turrent_U1" type="Position2D" parent="." index="36"]
position = Vector2( 6.81538, -220.787 )

[node name="Turrent_U2" type="Position2D" parent="." index="37"]
position = Vector2( -1.73391, -220.945 )

[node name="Turrent_U3" type="Position2D" parent="." index="38"]
position = Vector2( -10.3239, -220.797 )

[node name="Barrconnect" parent="." index="39" instance=ExtResource( 25 )]

[node name="Barrconnect2" parent="." index="40" instance=ExtResource( 27 )]

[node name="Barrconnect3" parent="." index="41" instance=ExtResource( 28 )]

[node name="Animated" type="AnimatedSprite" parent="." index="42"]
visible = false
position = Vector2( 11.6292, 13.8193 )
scale = Vector2( 1.561, 1.786 )
frames = SubResource( 5 )
animation = "idleD"

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="43"]
visible = false
position = Vector2( 7, 17.5 )
scale = Vector2( 1.59444, 1.805 )
frames = SubResource( 6 )
animation = "StrikeD"

[node name="Timerlol" type="Timer" parent="." index="44"]

[node name="Timerloltrue" type="Timer" parent="." index="45"]

[node name="BitaD" parent="." index="46" instance=ExtResource( 69 )]
position = Vector2( 0.490172, 136.752 )

[node name="BitaU" parent="." index="47" instance=ExtResource( 72 )]
position = Vector2( 0.657532, -96.5647 )

[node name="BitaL" parent="." index="48" instance=ExtResource( 71 )]
position = Vector2( -109.732, 54.3233 )

[node name="BitaR" parent="." index="49" instance=ExtResource( 70 )]
position = Vector2( 117.135, 51.6094 )

[node name="Br_U2" type="Position2D" parent="." index="50"]
position = Vector2( 0, -237 )

[node name="REDHPTIMER" type="Timer" parent="." index="51"]

[node name="TimerItem" type="Timer" parent="." index="52"]

[node name="AudioShot" type="AudioStreamPlayer" parent="." index="53"]
stream = ExtResource( 73 )

[node name="AudioDamage" type="AudioStreamPlayer" parent="." index="54"]
stream = ExtResource( 74 )

[connection signal="timeout" from="AllowShoot" to="." method="_on_AllowShoot_timeout"]
[connection signal="timeout" from="Arm" to="." method="_on_Arm_timeout"]
[connection signal="timeout" from="Timerlol" to="." method="_on_Timerlol_timeout"]
[connection signal="timeout" from="Timerloltrue" to="." method="_on_Timerloltrue_timeout"]
[connection signal="timeout" from="REDHPTIMER" to="." method="_on_REDHPTIMER_timeout"]
[connection signal="timeout" from="TimerItem" to="." method="_on_TimerItem_timeout"]
